--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       text-align: center;
     }
-    .login-logo {
-      max-width: 300px;
-      height: auto;
-      display: block;
-      margin: 0 auto 1.5rem;
+    .logo {
+      max-width: 200px;
+      margin-bottom: 1rem;
     }
     input {
       display: block;
@@ -53,7 +51,11 @@
 <body>
 
 <div class="login-container">
-  <img src="./images/YFNED_fleet_logo_navy.svg" alt="YFNED Fleet Logo" class="login-logo" />
+  <!-- LOGO IMAGE HERE -->
+  <img src="YFNED_fleet_logo_navy.svg" alt="YFNED Logo" class="logo" />
+  
+  <!-- REMOVED <h1>Fleet Login</h1> -->
+  
   <input type="email" id="login-email" placeholder="Email" />
   <input type="password" id="login-password" placeholder="Password" />
   <button id="login-btn">Login</button>
