--- a/calendar.html
+++ b/calendar.html
@@ -165,6 +165,7 @@
       <option value="14-24 2024 Grey Traverse C443C">2024 Grey Traverse C443C</option>
       <option value="15-24 2024 Grey Traverse C444C">2024 Grey Traverse C444C</option>
       <option value="16-24 2024 Blue Traverse CT073">2024 Blue Traverse CT073</option>
+      <option value="17-27 2025 Buick Envision CV294">2025 Buick Envision CV294</option>
     </select>
   </div>
 
