--- a/calendar.html
+++ b/calendar.html
@@ -166,7 +166,7 @@
       <option value="15-24 2024 Grey Traverse C444C">2024 Grey Traverse C444C</option>
       <option value="16-24 2024 Blue Traverse CT073">2024 Blue Traverse CT073</option>
       <option value="17-25 2025 Black Buick Envision CV294">2025 Black Buick Envision CV294</option>
-      <option value="18-25 2024 White Ford F750">2024 White Ford F750</option>
+      <option value="18-25 2024 White Ford F750 CVVVVV">2024 White Ford F750 CVVVVV</option>
     </select>
   </div>
 
