--- a/fleetmaster.html
+++ b/fleetmaster.html
@@ -98,7 +98,7 @@
 <script type="module">
   import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js';
   import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js';
-  import { getDatabase, ref, get, update } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
+  import { getDatabase, ref, onValue, update, get } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
 
   const app = initializeApp({
     apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
@@ -121,90 +121,90 @@
 
   const tableBody = document.querySelector('#vehicle-table tbody');
 
-  onAuthStateChanged(auth, async user => {
+  onAuthStateChanged(auth, user => {
     if (!user) return window.location.href = 'index.html';
 
-    const now = Date.now();
-    const snap = await get(ref(db, 'vehicles'));
-    if (!snap.exists()) return;
+    const vehiclesRef = ref(db, 'vehicles');
+    onValue(vehiclesRef, snapshot => {
+      if (!snapshot.exists()) return;
 
-    const vehicles = snap.val();
+      tableBody.innerHTML = ''; // clear old rows
 
-    Object.entries(vehicles).forEach(([name, data]) => {
-      const keyStatus = data.keyStatus || 'atFrontDesk';
-      const keyHeldBy = data.keyHeldBy || '';
-      const vehicleStatus = data.status || 'available';
-      const lastKeyChange = data.lastKeyChange || 0;
-      const alarm = data.alarm === true;
+      const vehicles = snapshot.val();
+      const now = Date.now();
 
-      const elapsed = now - lastKeyChange;
-      const overdue = elapsed > 3600000 && keyStatus === 'withStaff' && vehicleStatus === 'available' && alarm;
+      Object.entries(vehicles).forEach(([name, data]) => {
+        const keyStatus = data.keyStatus || 'atFrontDesk';
+        const keyHeldBy = data.keyHeldBy || '';
+        const vehicleStatus = data.status || 'available';
+        const lastKeyChange = data.lastKeyChange || 0;
+        const alarm = data.alarm === true;
 
-      const row = document.createElement('tr');
-      if (overdue) row.classList.add('alarm-row');
+        const elapsed = now - lastKeyChange;
+        const overdue = elapsed > 3600000 && keyStatus === 'withStaff' && vehicleStatus === 'available' && alarm;
 
-      const keyBtn = document.createElement('button');
-      keyBtn.textContent = keyStatus === 'atFrontDesk' ? 'Pass to Staff' : 'Return to Front Desk';
-      keyBtn.className = 'toggle-btn ' + keyStatus;
-      keyBtn.onclick = async () => {
-        const toStaff = keyStatus === 'atFrontDesk';
-        await update(ref(db, 'vehicles/' + name), {
-          keyStatus: toStaff ? 'withStaff' : 'atFrontDesk',
-          keyHeldBy: toStaff ? user.email : null,
-          lastKeyChange: Date.now(),
-          alarm: toStaff
-        });
-        location.reload();
-      };
+        const row = document.createElement('tr');
+        if (overdue) row.classList.add('alarm-row');
 
-      const vehicleBtn = document.createElement('button');
-      vehicleBtn.textContent = vehicleStatus === 'available' ? 'Mark as Signed Out' : 'Mark as Available';
-      vehicleBtn.className = 'toggle-btn ' + (vehicleStatus === 'available' ? 'available' : 'signedOut');
-      vehicleBtn.onclick = async () => {
-        const isOut = vehicleStatus === 'available';
-        await update(ref(db, 'vehicles/' + name), {
-          status: isOut ? 'signedOut' : 'available',
-          alarm: isOut ? false : alarm
-        });
-        location.reload();
-      };
+        const keyBtn = document.createElement('button');
+        keyBtn.textContent = keyStatus === 'atFrontDesk' ? 'Pass to Staff' : 'Return to Front Desk';
+        keyBtn.className = 'toggle-btn ' + keyStatus;
+        keyBtn.onclick = async () => {
+          const toStaff = keyStatus === 'atFrontDesk';
+          await update(ref(db, 'vehicles/' + name), {
+            keyStatus: toStaff ? 'withStaff' : 'atFrontDesk',
+            keyHeldBy: toStaff ? user.email : null,
+            lastKeyChange: Date.now(),
+            alarm: toStaff
+          });
+        };
 
-      const alarmBtn = document.createElement('button');
-      alarmBtn.textContent = alarm ? 'Disable Alarm' : 'Enable Alarm';
-      alarmBtn.className = 'toggle-btn alarm';
-      alarmBtn.onclick = async () => {
-        await update(ref(db, 'vehicles/' + name), { alarm: !alarm });
-        location.reload();
-      };
+        const vehicleBtn = document.createElement('button');
+        vehicleBtn.textContent = vehicleStatus === 'available' ? 'Mark as Signed Out' : 'Mark as Available';
+        vehicleBtn.className = 'toggle-btn ' + (vehicleStatus === 'available' ? 'available' : 'signedOut');
+        vehicleBtn.onclick = async () => {
+          const isOut = vehicleStatus === 'available';
+          await update(ref(db, 'vehicles/' + name), {
+            status: isOut ? 'signedOut' : 'available',
+            alarm: isOut ? false : alarm
+          });
+        };
 
-      const triggerBtn = document.createElement('button');
-      triggerBtn.textContent = '🔔 Trigger';
-      triggerBtn.className = 'toggle-btn alarm';
-      triggerBtn.onclick = async () => {
-        const oneHourAgo = Date.now() - 3600001;
-        await update(ref(db, 'vehicles/' + name), {
-          alarm: true,
-          lastKeyChange: oneHourAgo,
-          keyStatus: 'withStaff',
-          status: 'available'
-        });
-        location.reload();
-      };
+        const alarmBtn = document.createElement('button');
+        alarmBtn.textContent = alarm ? 'Disable Alarm' : 'Enable Alarm';
+        alarmBtn.className = 'toggle-btn alarm';
+        alarmBtn.onclick = async () => {
+          await update(ref(db, 'vehicles/' + name), { alarm: !alarm });
+        };
 
-      const createCell = content => {
-        const td = document.createElement('td');
-        if (content instanceof HTMLElement) td.appendChild(content);
-        else td.textContent = content;
-        return td;
-      };
+        const triggerBtn = document.createElement('button');
+        triggerBtn.textContent = '🔔 Trigger';
+        triggerBtn.className = 'toggle-btn alarm';
+        triggerBtn.onclick = async () => {
+          const oneHourAgo = Date.now() - 3600001;
+          await update(ref(db, 'vehicles/' + name), {
+            alarm: true,
+            lastKeyChange: oneHourAgo,
+            keyStatus: 'withStaff',
+            status: 'available'
+          });
+        };
 
-      row.appendChild(createCell(overdue ? `🚨 ${name}` : name));
-      row.appendChild(createCell(keyBtn));
-      row.appendChild(createCell(keyHeldBy));
-      row.appendChild(createCell(vehicleBtn));
-      row.appendChild(createCell(alarmBtn));
-      row.appendChild(createCell(triggerBtn));
-      tableBody.appendChild(row);
+        const createCell = content => {
+          const td = document.createElement('td');
+          if (content instanceof HTMLElement) td.appendChild(content);
+          else td.textContent = content;
+          return td;
+        };
+
+        row.appendChild(createCell(overdue ? `🚨 ${name}` : name));
+        row.appendChild(createCell(keyBtn));
+        row.appendChild(createCell(keyHeldBy));
+        row.appendChild(createCell(vehicleBtn));
+        row.appendChild(createCell(alarmBtn));
+        row.appendChild(createCell(triggerBtn));
+        tableBody.appendChild(row);
+      });
     });
   });
 
