--- a/fleetmaster.html
+++ b/fleetmaster.html
@@ -73,6 +73,7 @@
 <header>
   <div>YFNED Fleetmaster Controls</div>
   <div>
+    <button onclick="location.href='mastercalendar.html'">Master Calendar</button>
     <button id="export-btn">Export Logs to Excel</button>
     <button id="logout-btn">Logout</button>
   </div>
