--- a/mastercalendar.html
+++ b/mastercalendar.html
@@ -77,7 +77,7 @@
 <body>
   <header style="display: flex; justify-content: space-between; align-items: center; background: #333; color: white; padding: 1rem;">
     <div>All Vehicle Bookings</div>
-    <button onclick="location.href='fleetmaster.html'" style="background:#666;color:white;border:none;padding:0.5rem 1rem;border-radius:4px;cursor:pointer;">Fleetmaster View</button>
+    <button onclick="location.href='fleetmaster.html'">Fleetmaster View</button>
 </header>
 
   <h1>All Vehicle Bookings</h1>
