--- a/mastercalendar.html
+++ b/mastercalendar.html
@@ -10,7 +10,10 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 20px;
-      background-color: #f0f4f8;
+      background-color: #5cbde5;
+      background-image: url('skybackgroundmidnightfeather.png');
+      background-repeat: repeat;
+      background-size: 400px;
     }
     h1 {
       text-align: center;
